# synthbench

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: openai-tts-stress.toml  tts-stress.toml
src/synthbench/: __init__.py  __main__.py  models.py  pricing.py  pricing.toml
src/synthbench/cli/: app.py  run.py
src/synthbench/config/: scenario.py
src/synthbench/engine/: budget.py  runner.py
src/synthbench/providers/: base.py  elevenlabs.py  openai_tts.py  registry.py
src/synthbench/reporting/: analysis.py  json_report.py  terminal.py
src/synthbench/scoring/: base.py  registry.py
src/synthbench/scoring/audio/: duration.py  file_integrity.py  wer.py
tests/: conftest.py  test_pricing.py
tests/integration/: test_elevenlabs_live.py
tests/test_cli/: test_app.py
tests/test_config/: test_scenario.py
tests/test_engine/: test_budget.py  test_runner.py
tests/test_providers/: test_elevenlabs.py  test_generation_models.py  test_openai_tts.py  test_registry.py
tests/test_reporting/: test_analysis.py  test_json_report.py  test_terminal.py
tests/test_scoring/: test_base.py  test_duration.py  test_file_integrity.py  test_scorer_registry.py  test_wer.py
