[tool.poetry]
name = "synthbench"
version = "0.1.0"
description = "Quality-under-load benchmarking for AI media generation APIs"
authors = ["Raj Navakoti <rajnavakoti@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rajnavakoti/synthbench"
repository = "https://github.com/rajnavakoti/synthbench"
keywords = ["benchmarking", "tts", "ai", "media-generation", "load-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
packages = [{include = "synthbench", from = "src"}]
include = [{path = "src/synthbench/pricing.toml", format = ["sdist", "wheel"]}]

[tool.poetry.scripts]
synthbench = "synthbench.cli.app:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = ">=0.12"
rich = ">=13.0"
pydantic = ">=2.0"
aiohttp = ">=3.9"
tomli = {version = ">=2.0", python = "<3.11"}

[tool.poetry.extras]
audio = ["openai-whisper", "jiwer", "soundfile", "librosa"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
ruff = ">=0.4"
pre-commit = ">=3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
